# fdb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/fdb/: Cargo.toml
crates/fdb/src/: main.rs
crates/libfdb/: Cargo.toml
crates/libfdb/src/: errors.rs  lib.rs  process.rs
tests/: integration.rs
