[workspace]
resolver = "2"
members = ["crates/libfdb", "crates/fdb"]

[workspace.package]
edition = "2024"
authors = ["0xpantera@proton.me"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
nix = { version = "0.30.0", features = ["ptrace", "signal", "process"] }
object = "0.37"
gimli = "0.32"
addr2line = "0.25"
